xrdppkgdatadir=$(datadir)/xrdp

pkglibexec_PROGRAMS = \
  xrdp-droppriv

nodist_xrdppkgdata_SCRIPTS = \
  xrdp-chkpriv

AM_LDFLAGS = 

AM_CPPFLAGS = \
  -I$(top_srcdir)/common

xrdp_droppriv_SOURCES = \
  xrdp-chkpriv.in \
  xrdp-droppriv.c

xrdp_droppriv_LDADD = \
  $(top_builddir)/common/libcommon.la \
  $(DLOPEN_LIBS)

SUBST_VARS = sed \
   -e 's|@pkglibexecdir[@]|$(pkglibexecdir)|g' \
   -e 's|@sysconfdir[@]|$(sysconfdir)|g' \
   -e 's|@sysconfsubdir[@]|$(sysconfsubdir)|g'

subst_verbose = $(subst_verbose_@AM_V@)
subst_verbose_ = $(subst_verbose_@AM_DEFAULT_V@)
subst_verbose_0 = @echo "  SUBST    $@";

SUFFIXES = .in
.in:
	$(subst_verbose)$(SUBST_VARS) $< > $@

CLEANFILES = $(nodist_xrdppkgdata_SCRIPTS)

